@@ -184,6 +184,7 @@ graalvmNative {
             runtimeArgs.add('--add-opens=java.base/java.time=ALL-UNNAMED')
             runtimeArgs.add('--add-opens=java.base/java.net=ALL-UNNAMED')
             runtimeArgs.add('--add-opens=java.base/java.nio=ALL-UNNAMED')
+            runtimeArgs.add('--add-opens=java.base/java.util.regex=ALL-UNNAMED')
             runtimeArgs.add('--add-opens=java.base/sun.nio.ch=ALL-UNNAMED')
             runtimeArgs.add('--add-opens=java.management/sun.management=ALL-UNNAMED')
             runtimeArgs.add('--add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED')
@@ -217,6 +218,8 @@ processAot {
     list.add("java.management/sun.management=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("jdk.management/com.sun.management.internal=ALL-UNNAMED")
+    list.add("--add-opens")
+    list.add("java.base/java.util.regex=ALL-UNNAMED")
     list.add("--add-opens")
     list.add("java.rmi/sun.rmi.transport=ALL-UNNAMED")
     list.add("-Xdebug")
